fix: made by the community banner on mobile not full width (WEB-37) #76

--- a/src/app/components/bannerSection/bannerSection.module.css
+++ b/src/app/components/bannerSection/bannerSection.module.css
@@ -1,6 +1,6 @@
 .bannerSection {
   background-color: #0f1038;
-  width: 100%;
+  width: 102%;
   display: flex;
   align-items: center;
   justify-content: center;
